<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/ic_movie_white"
        android:title="@string/movie" />

    <item
        android:id="@+id/navigation_tvshow"
        android:icon="@drawable/ic_tvshow_white"
        android:title="@string/tvshow" />

    <item
        android:id="@+id/navigation_bookmark"
        android:icon="@drawable/ic_bookmarked_white"
        android:title="@string/bookmark"/>
</menu>