<resources>
    <string name="app_name">MovieCatalogue</string>
    <string name="title_activity_detail_film">Detail Film</string>

    <string name="movie">Film</string>
    <string name="tvshow">Acara TV</string>
    <string name="title">Judul</string>
    <string name="release_date">Tanggal Rilis</string>
    <string name="rating">Rating</string>
    <string name="language">Bahasa</string>
    <string name="description">Deskripsi</string>
    <string name="genre">Genre</string>
    <string name="share_text">Segera tonton film %s di teater/website streaming favorit kalian!</string>
    <string name="bookmark">Bookmark</string>
    <string name="menu_bookmark">bookmark</string>
    <string name="message_undo">Batalkan menghapus item sebelumnya?</string>
    <string name="message_ok">OK</string>
    <string name="bookmarktv">TV</string>
</resources>